# gh-deploys

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: bandit.yml  codeql.yml
config/: example-config.yaml
gh_deploys/: __init__.py  config.py  server.py
server_scripts/: gh-deploys.service  run_server.sh
src/: __init__.py  config.py  server.py
